SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/util/src)

AUX_SOURCE_DIRECTORY(src SRC_LIST)

ADD_EXECUTABLE(mytest ${SRC_LIST} mytest.c)
TARGET_LINK_LIBRARIES(mytest pmsutil curl)

ADD_EXECUTABLE(mytest2 mytest2.c)
ADD_EXECUTABLE(mytest3 mytest3.c)
# TARGET_LINK_LIBRARIES(mytest2 pmsutil curl)

INSTALL (TARGETS mytest DESTINATION bin PERMISSIONS SETUID)
