SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

MESSAGE(${PROJECT_BINARY_DIR})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/util/src ${PROJECT_BINARY_DIR}/gen)

AUX_SOURCE_DIRECTORY(src DIR_SRC)

ADD_EXECUTABLE(pms ${DIR_SRC})

TARGET_LINK_LIBRARIES(pms pmsutil curl)

INSTALL (TARGETS pms DESTINATION bin)