SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

EXECUTE_PROCESS(COMMAND
        git describe --match=NeVeRmAtCh --always --abbrev=40 --dirty
        WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
        OUTPUT_VARIABLE PMS_GIT_SHA1
        ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE)

MESSAGE(${PMS_GIT_SHA1})

MESSAGE(${CMAKE_CURRENT_SOURCE_DIR})

# generate version.cc
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/src/pms_version.c.in" "${CMAKE_CURRENT_BINARY_DIR}/gen/pms_version.c" @ONLY)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src DIR_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_BINARY_DIR}/gen DIR_SRC)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/util/src)

ADD_LIBRARY (pmsutil STATIC ${DIR_SRC})

MESSAGE(${DIR_SRC})

INSTALL (TARGETS pmsutil DESTINATION bin)
# INSTALL (FILES src/sds.h DESTINATION include)